colored #version and recolred #playerCount to #fff000

--- a/Server/index.html
+++ b/Server/index.html
@@ -99,7 +99,13 @@
         }
 
         #playerCount {
-            color: #189618;
+            color: #fff000;
+            font-weight: bold;
+            animation: pop 1s infinite;
+        }
+
+        #version {
+            color: #fff000;
             font-weight: bold;
             animation: pop 1s infinite;
         }
