--- a/Server/index.html
+++ b/Server/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta property="og:title" content="เซิร์ฟเวอร์ของ @CMGMMO">
     <meta property="og:description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO!">
-    <meta property="og:image" content="https://media.discordapp.net/attachments/661178624124387328/1163828962573680652/image.png?ex=6540ff2f&is=652e8a2f&hm=81ad06194ba2100c7fc9b9bd61fd4d47c7cd21eccfa8518a0ac211aeeadc03b2&=&width=640&height=640">
+    <meta property="og:image" content="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
     <meta property="og:url" content="https://cmgmmo.github.io">
     <meta charset="UTF-8">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add @CMGMMO Server!</title>
     <link rel="stylesheet" href="../styles.css">
-    <link rel="icon" href="https://media.discordapp.net/attachments/661178624124387328/1163828962573680652/image.png?ex=6540ff2f&is=652e8a2f&hm=81ad06194ba2100c7fc9b9bd61fd4d47c7cd21eccfa8518a0ac211aeeadc03b2&=&width=640&height=640">
+    <link rel="icon" href="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
     <script src="../script.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@400;700;900&display=swap');
