--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="twitter:site" content="@discord" />
     <meta name="twitter:title" content="เซิร์ฟเวอร์ของ @CMGMMO" />
     <meta name="twitter:description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO" />
-    
+    <meta name="google-site-verification" content="clwqiORHz5wXtxqNsS3WtqyEKo7GCJcGv_q-C1llc3Y">
     <meta property="og:locale:alternate" content="en-GB" />
     <meta property="og:locale:alternate" content="ru" />
     <meta property="og:locale:alternate" content="fr" />
