--- a/1year/index.html
+++ b/1year/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@400;700;900&display=swap');
@@ -18,56 +19,85 @@
     href="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
   <script src="../script.js"></script>
   <meta property="og:title" content="@CMGMMO's 1 Year Event">
-  <meta property="og:description" content="กิจกรรมฉลองครบรอบ 1 ปี CMG MMO • รับของรางวัลและลุ้นรับรางวัลใหญ่ในเซิฟเวอร์!">
+  <meta property="og:description"
+    content="กิจกรรมฉลองครบรอบ 1 ปี CMG MMO • รับของรางวัลและลุ้นรับรางวัลใหญ่ในเซิฟเวอร์!">
   <meta property="og:image"
     content="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
   <meta property="og:url" content="https://cmgmmo.github.io">
-      <meta name="description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO!" />
-    <meta name="twitter:card" content="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671" />
-    <meta name="twitter:site" content="@discord" />
-    <meta name="twitter:title" content="เซิร์ฟเวอร์ของ @CMGMMO" />
-    <meta name="twitter:description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO" />
-    
-    <meta property="og:locale:alternate" content="en-GB" />
-    <meta property="og:locale:alternate" content="ru" />
-    <meta property="og:locale:alternate" content="fr" />
-    <meta property="og:locale:alternate" content="ja" />
-    <meta property="og:locale:alternate" content="sv-SE" />
-    <meta property="og:locale" content="en-US" />
-    <meta property="og:locale:alternate" content="de" />
-    <meta property="og:locale:alternate" content="hu" />
-    <meta property="og:locale:alternate" content="ar" />
-    <meta property="og:locale:alternate" content="tr" />
-    <meta property="og:locale:alternate" content="el" />
-    <meta property="og:locale:alternate" content="ko" />
-    <meta property="og:locale:alternate" content="cs" />
-    <meta property="og:locale:alternate" content="he" />
-    <meta property="og:locale:alternate" content="fi" />
-    <meta property="og:locale:alternate" content="lt" />
-    <meta property="og:locale:alternate" content="th" />
-    <meta property="og:locale:alternate" content="vi" />
-    <meta property="og:locale:alternate" content="nl" />
-    <meta property="og:locale:alternate" content="da" />
-    <meta property="og:locale:alternate" content="uk" />
-    <meta property="og:locale:alternate" content="no" />
-    <meta property="og:locale:alternate" content="id" />
-    <meta property="og:locale:alternate" content="hi" />
-    <meta property="og:locale:alternate" content="ro" />
-    <meta property="og:locale:alternate" content="bg" />
-    <meta property="og:locale:alternate" content="es-ES" />
-    <meta property="og:locale:alternate" content="it" />
-    <meta property="og:locale:alternate" content="pt-BR" />
-    <meta property="og:locale:alternate" content="zh-CN" />
-    <meta property="og:locale:alternate" content="hr" />
-    <meta property="og:locale:alternate" content="pl" />
-    <meta property="og:locale:alternate" content="zh-TW" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO!" />
+  <meta name="twitter:card"
+    content="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671" />
+  <meta name="twitter:site" content="@discord" />
+  <meta name="twitter:title" content="เซิร์ฟเวอร์ของ @CMGMMO" />
+  <meta name="twitter:description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO" />
+
+  <meta property="og:locale:alternate" content="en-GB" />
+  <meta property="og:locale:alternate" content="ru" />
+  <meta property="og:locale:alternate" content="fr" />
+  <meta property="og:locale:alternate" content="ja" />
+  <meta property="og:locale:alternate" content="sv-SE" />
+  <meta property="og:locale" content="en-US" />
+  <meta property="og:locale:alternate" content="de" />
+  <meta property="og:locale:alternate" content="hu" />
+  <meta property="og:locale:alternate" content="ar" />
+  <meta property="og:locale:alternate" content="tr" />
+  <meta property="og:locale:alternate" content="el" />
+  <meta property="og:locale:alternate" content="ko" />
+  <meta property="og:locale:alternate" content="cs" />
+  <meta property="og:locale:alternate" content="he" />
+  <meta property="og:locale:alternate" content="fi" />
+  <meta property="og:locale:alternate" content="lt" />
+  <meta property="og:locale:alternate" content="th" />
+  <meta property="og:locale:alternate" content="vi" />
+  <meta property="og:locale:alternate" content="nl" />
+  <meta property="og:locale:alternate" content="da" />
+  <meta property="og:locale:alternate" content="uk" />
+  <meta property="og:locale:alternate" content="no" />
+  <meta property="og:locale:alternate" content="id" />
+  <meta property="og:locale:alternate" content="hi" />
+  <meta property="og:locale:alternate" content="ro" />
+  <meta property="og:locale:alternate" content="bg" />
+  <meta property="og:locale:alternate" content="es-ES" />
+  <meta property="og:locale:alternate" content="it" />
+  <meta property="og:locale:alternate" content="pt-BR" />
+  <meta property="og:locale:alternate" content="zh-CN" />
+  <meta property="og:locale:alternate" content="hr" />
+  <meta property="og:locale:alternate" content="pl" />
+  <meta property="og:locale:alternate" content="zh-TW" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="canonical" href="https://cmgmmo.github.io">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="CMGMMO">
+  <meta name="keywords"
+    content="Minecraft, minecraft, mc, minecraftbedrock, bedrock, cmgmmo, thai, server, mmo, minecraftpe, pe, cmg, aitji, ait, cmgelement, element, mcpe, mc server, minecraft server, vanila server, command, scipt, javascript">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <title>Add @CMGMMO Server!</title>
+  <link rel="stylesheet" href="./styles.css">
+  <link rel="apple-touch-icon"
+    href="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
+  <link rel="icon"
+    href="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
+  <script src="./script.js"></script>
+  <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "Organization",
+          "url": "https://cmgmmo.github.io",
+          "name": "CMGMMO",
+          "description": "เซิร์ฟเวอร์ของ @CMGMMO"
+        }
+    </script>
   <meta charset="UTF-8">
   <title>CMGMMO!</title>
   <h2>กรุณารอสักครู่<h2>
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfArtqx7DUhZiRIbJxqmdeE6YtF6ZeahO_MBou22h90GVOsjg/viewform">ไม่ได้ถูก Redirect หรอ?</a>
-  <link rel="icon" href="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
-  <meta http-equiv="refresh" content="0;url=https://docs.google.com/forms/d/e/1FAIpQLSfArtqx7DUhZiRIbJxqmdeE6YtF6ZeahO_MBou22h90GVOsjg/viewform">
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfArtqx7DUhZiRIbJxqmdeE6YtF6ZeahO_MBou22h90GVOsjg/viewform">ไม่ได้ถูก
+        Redirect หรอ?</a>
+      <link rel="icon"
+        href="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
+      <meta http-equiv="refresh"
+        content="0;url=https://docs.google.com/forms/d/e/1FAIpQLSfArtqx7DUhZiRIbJxqmdeE6YtF6ZeahO_MBou22h90GVOsjg/viewform">
 </head>
 
 </html>
