--- a/Tournament/index.html
+++ b/Tournament/index.html
@@ -53,6 +53,29 @@
     <link rel="stylesheet" href="../styles.css">
     <link rel="icon"
         href="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
+    <link rel="canonical" href="https://cmgmmo.github.io">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="CMGMMO">
+    <meta name="keywords"
+        content="Minecraft, minecraft, mc, minecraftbedrock, bedrock, cmgmmo, thai,server, mmo, minecraftpe, pe, cmg, aitji, ait, cmgelement, element, mcpe, mcserver, minecraft server, vanila server, command, scipt, javascript">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <title>Add @CMGMMO Server!</title>
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="apple-touch-icon"
+        href="https://media.discordapp.net/attachments/6611786241243873281167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671height=671">
+    <link rel="icon"
+        href="https://media.discordapp.net/attachments/6611786241243873281167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671height=671">
+    <script src="./script.js"></script>
+    <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "Organization",
+          "url": "https://cmgmmo.github.io",
+          "name": "CMGMMO",
+          "description": "เซิร์ฟเวอร์ของ @CMGMMO"
+        }
+    </script>
     <script src="../script.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@400;700;900&display=swap');
