--- a/discord/index.html
+++ b/discord/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="theme-color" content="#faf86b">
     <meta property="og:title" content="ดิสคอร์ดของ CMGMMO">
     <meta property="og:description" content="เข้าร่วมชุมชนของพวกเรา ดิสคอร์ด">
     <meta property="og:image"
