--- a/Server/index.html
+++ b/Server/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="theme-color" content="#faf86b">
     <meta property="og:title" content="เซิร์ฟเวอร์ของ @CMGMMO">
     <meta property="og:description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO!">
     <meta property="og:image"
