--- a/1year/index.html
+++ b/1year/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="../styles.css">
   <link rel="icon"
     href="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
+  <meta name="theme-color" content="#faf86b">
   <script src="../script.js"></script>
   <meta property="og:title" content="@CMGMMO's 1 Year Event">
   <meta property="og:description"
