--- a/1year/index.html
+++ b/1year/index.html
@@ -13,13 +13,13 @@
       font-family: 'IBM Plex Sans Thai', Arial, sans-serif;
     }
   </style>
-  <title>@CMGMMO • 1 Year</title>
+  <title>CMGMMO • 1 Year</title>
   <link rel="stylesheet" href="../styles.css">
   <link rel="icon"
     href="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
   <meta name="theme-color" content="#faf86b">
   <script src="../script.js"></script>
-  <meta property="og:title" content="@CMGMMO's 1 Year Event">
+  <meta property="og:title" content="CMGMMO's 1 Year Event">
   <meta property="og:description"
     content="กิจกรรมฉลองครบรอบ 1 ปี CMG MMO • รับของรางวัลและลุ้นรับรางวัลใหญ่ในเซิฟเวอร์!">
   <meta property="og:image"
@@ -29,7 +29,7 @@
   <meta name="twitter:card"
     content="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671" />
   <meta name="twitter:site" content="@discord" />
-  <meta name="twitter:title" content="เซิร์ฟเวอร์ของ @CMGMMO" />
+  <meta name="twitter:title" content="เซิร์ฟเวอร์ของ CMGMMO" />
   <meta name="twitter:description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO" />
 
   <meta property="og:locale:alternate" content="en-GB" />
@@ -74,7 +74,7 @@
     content="Minecraft, minecraft, mc, minecraftbedrock, bedrock, cmgmmo, thai, server, mmo, minecraftpe, pe, cmg, aitji, ait, cmgelement, element, mcpe, mc server, minecraft server, vanila server, command, scipt, javascript">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>Add @CMGMMO Server!</title>
+  <title>Add CMGMMO Server!</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="apple-touch-icon"
     href="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
@@ -87,7 +87,7 @@
           "@type": "Organization",
           "url": "https://cmgmmo.github.io",
           "name": "CMGMMO",
-          "description": "เซิร์ฟเวอร์ของ @CMGMMO"
+          "description": "เซิร์ฟเวอร์ของ CMGMMO"
         }
     </script>
   <meta charset="UTF-8">
