--- a/1year/index.html
+++ b/1year/index.html
@@ -24,7 +24,7 @@
     content="กิจกรรมฉลองครบรอบ 1 ปี CMG MMO • รับของรางวัลและลุ้นรับรางวัลใหญ่ในเซิฟเวอร์!">
   <meta property="og:image"
     content="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
-  <meta property="og:url" content="https://cmgmmo.github.io">
+  <meta property="og:url" content="https://cmgmmo.vercel.app">
   <meta name="description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO!" />
   <meta name="twitter:card"
     content="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671" />
@@ -67,7 +67,7 @@
   <meta property="og:locale:alternate" content="zh-TW" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="canonical" href="https://cmgmmo.github.io">
+  <link rel="canonical" href="https://cmgmmo.vercel.app">
   <meta name="robots" content="index, follow">
   <meta name="author" content="CMGMMO">
   <meta name="keywords"
@@ -85,7 +85,7 @@
         {
           "@context": "http://schema.org",
           "@type": "Organization",
-          "url": "https://cmgmmo.github.io",
+          "url": "https://cmgmmo.vercel.app",
           "name": "CMGMMO",
           "description": "เซิร์ฟเวอร์ของ CMGMMO"
         }
