--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta name="theme-color" content="#faf86b">
     <meta property="og:site_name" content="CMGMMO" />
-    <meta property="og:title" content="เซิร์ฟเวอร์ของ CMGMMO">
+    <meta property="og:title" content="CMGMMO">
     <meta property="og:description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO!">
     <meta property="og:image"
         content="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
-    <meta property="og:url" content="https://cmgmmo.github.io">
+    <meta property="og:url" content="https://cmgmmo.vercel.app">
     <meta charset="UTF-8">
 
     <meta name="description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO!" />
@@ -53,14 +53,14 @@
     <meta property="og:locale:alternate" content="zh-TW" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="canonical" href="https://cmgmmo.github.io">
+    <link rel="canonical" href="https://cmgmmo.vercel.app">
     <meta name="robots" content="index, follow">
     <meta name="author" content="CMGMMO">
     <meta name="keywords"
         content="Minecraft, minecraft, mc, minecraftbedrock, bedrock, cmgmmo, thai, server, mmo, minecraftpe, pe, cmg, aitji, ait, cmgelement, element, mcpe, mc server, minecraft server, vanila server, command, scipt, javascript">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Add CMGMMO Server!</title>
+    <title>CMGMMO Server!</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="apple-touch-icon"
         href="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
@@ -71,7 +71,7 @@
         {
           "@context": "http://schema.org",
           "@type": "Organization",
-          "url": "https://cmgmmo.github.io",
+          "url": "https://cmgmmo.vercel.app",
           "name": "CMGMMO",
           "description": "เซิร์ฟเวอร์ของ CMGMMO"
         }
