--- a/Tournament/index.html
+++ b/Tournament/index.html
@@ -6,7 +6,7 @@
     <meta property="og:description" content="สมัครเข้าร่วมทัวร์นาเมนต์ของเซิร์ฟเวอร์ CMGMMO!">
     <meta property="og:image"
         content="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
-    <meta property="og:url" content="https://cmgmmo.github.io">
+    <meta property="og:url" content="https://cmgmmo.vercel.app">
     <meta charset="UTF-8">
     <meta name="description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO!" />
     <meta name="twitter:card"
@@ -54,7 +54,7 @@
     <link rel="stylesheet" href="../styles.css">
     <link rel="icon"
         href="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
-    <link rel="canonical" href="https://cmgmmo.github.io">
+    <link rel="canonical" href="https://cmgmmo.vercel.app">
     <meta name="robots" content="index, follow">
     <meta name="author" content="CMGMMO">
     <meta name="keywords"
@@ -72,7 +72,7 @@
         {
           "@context": "http://schema.org",
           "@type": "Organization",
-          "url": "https://cmgmmo.github.io",
+          "url": "https://cmgmmo.vercel.app",
           "name": "CMGMMO",
           "description": "เซิร์ฟเวอร์ของ CMGMMO"
         }
