--- a/Server/index.html
+++ b/Server/index.html
@@ -2,74 +2,44 @@
 <html>
 
 <head>
-    <meta name="theme-color" content="#faf86b">
-    <meta property="og:title" content="เซิร์ฟเวอร์ของ CMGMMO">
-    <meta property="og:description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO!">
-    <meta property="og:image"
-        content="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
-    <meta property="og:url" content="https://cmgmmo.github.io">
-    <meta charset="UTF-8">
-    <meta name="description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO!" />
-    <meta name="twitter:card"
-        content="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671" />
-    <meta name="twitter:site" content="@discord" />
-    <meta name="twitter:title" content="เซิร์ฟเวอร์ของ CMGMMO" />
-    <meta name="twitter:description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO" />
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@400;700;900&display=swap');
 
-    <meta property="og:locale:alternate" content="en-GB" />
-    <meta property="og:locale:alternate" content="ru" />
-    <meta property="og:locale:alternate" content="fr" />
-    <meta property="og:locale:alternate" content="ja" />
-    <meta property="og:locale:alternate" content="sv-SE" />
-    <meta property="og:locale" content="en-US" />
-    <meta property="og:locale:alternate" content="de" />
-    <meta property="og:locale:alternate" content="hu" />
-    <meta property="og:locale:alternate" content="ar" />
-    <meta property="og:locale:alternate" content="tr" />
-    <meta property="og:locale:alternate" content="el" />
-    <meta property="og:locale:alternate" content="ko" />
-    <meta property="og:locale:alternate" content="cs" />
-    <meta property="og:locale:alternate" content="he" />
-    <meta property="og:locale:alternate" content="fi" />
-    <meta property="og:locale:alternate" content="lt" />
-    <meta property="og:locale:alternate" content="th" />
-    <meta property="og:locale:alternate" content="vi" />
-    <meta property="og:locale:alternate" content="nl" />
-    <meta property="og:locale:alternate" content="da" />
-    <meta property="og:locale:alternate" content="uk" />
-    <meta property="og:locale:alternate" content="no" />
-    <meta property="og:locale:alternate" content="id" />
-    <meta property="og:locale:alternate" content="hi" />
-    <meta property="og:locale:alternate" content="ro" />
-    <meta property="og:locale:alternate" content="bg" />
-    <meta property="og:locale:alternate" content="es-ES" />
-    <meta property="og:locale:alternate" content="it" />
-    <meta property="og:locale:alternate" content="pt-BR" />
-    <meta property="og:locale:alternate" content="zh-CN" />
-    <meta property="og:locale:alternate" content="hr" />
-    <meta property="og:locale:alternate" content="pl" />
-    <meta property="og:locale:alternate" content="zh-TW" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add CMGMMO Server!</title>
-    <link rel="stylesheet" href="../styles.css">
-    <link rel="icon"
-        href="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
-    <link rel="canonical" href="https://cmgmmo.github.io">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="CMGMMO">
-    <meta name="keywords"
-        content="Minecraft, minecraft, mc, minecraftbedrock, bedrock, cmgmmo, thai, server, mmo, minecraftpe, pe, cmg, aitji, ait, cmgelement, element, mcpe, mc server, minecraft server, vanila server, command, scipt, javascript">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      overflow: hidden;
+      font-family: 'IBM Plex Sans Thai', Arial, sans-serif;
+    }
+  </style>
+  <title>CMGMMO</title>
+  <link rel="stylesheet" href="../styles.css">
+  <link rel="icon"
+    href="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
+  <meta name="theme-color" content="#faf86b">
+  <script src="../script.js"></script>
+  <meta property="og:title" content="CMGMMO's 1 Year Event">
+  <meta property="og:description"
+    content="กิจกรรมฉลองครบรอบ 1 ปี CMG MMO • รับของรางวัลและลุ้นรับรางวัลใหญ่ในเซิฟเวอร์!">
+  <meta property="og:image"
+    content="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
+  <meta property="og:url" content="https://cmgmmo.github.io">
+  <meta name="description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO!" />
+  <meta name="twitter:card"
+    content="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671" />
+  <meta name="twitter:site" content="@discord" />
+  <meta name="twitter:title" content="เซิร์ฟเวอร์ของ CMGMMO" />
+  <meta name="twitter:description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO" />
 
-    <title>Add CMGMMO Server!</title>
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="apple-touch-icon"
-        href="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
-    <link rel="icon"
-        href="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
-    <script src="./script.js"></script>
-    <script type="application/ld+json">
+  <title>Add CMGMMO Server!</title>
+  <link rel="stylesheet" href="./styles.css">
+  <link rel="apple-touch-icon"
+    href="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
+  <link rel="icon"
+    href="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
+  <script src="./script.js"></script>
+  <script type="application/ld+json">
         {
           "@context": "http://schema.org",
           "@type": "Organization",
@@ -78,278 +48,11 @@
           "description": "เซิร์ฟเวอร์ของ CMGMMO"
         }
     </script>
-    <script src="../script.js"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@400;700;900&display=swap');
-        @media (max-width: 768px) {
-            img.w-48 {
-                max-width: 80%;
-                height: auto;
-            }
-        }
-
-        .fade-in-background {
-            animation: fade-in 1s ease-in-out;
-        }
-
-        @keyframes fade-in {
-            0% {
-                opacity: 0;
-            }
-
-            100% {
-                opacity: 1;
-            }
-        }
-
-        body {
-            backdrop-filter: blur(3px);
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-attachment: fixed;
-            text-align: center;
-            overflow: auto;
-            font-size: 20px;
-            font-family: 'IBM Plex Sans Thai', Arial, sans-serif;
-            height: 100vh;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        main {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .container {
-            padding: 10px;
-            max-width: 90%;
-            display: inline-block;
-            border: 5px solid rgba(0, 0, 0, 0.5);
-            border-radius: 10px;
-            background-color: rgba(0, 0, 0, 0.5);
-            backdrop-filter: blur(5px);
-        }
-
-        h2 {
-            color: #e0dede;
-            margin-top: 0;
-            transition: color, transform 0.1s ease;
-        }
-
-        h2:hover {
-            color: #fcffa0;
-            margin-top: 0;
-            transform: scale(1.05);
-        }
-
-        p {
-            color: #e0dede;
-            margin: 10px 0;
-        }
-
-        @keyframes pop {
-
-            0%,
-            100% {
-                transform: scale(1);
-            }
-
-            50% {
-                transform: scale(1.1);
-            }
-        }
-
-        #playerCount {
-            color: #fff000;
-            font-weight: bold;
-            animation: pop 1s infinite;
-        }
-
-        #version {
-            color: #fff000;
-            font-weight: bold;
-            animation: pop 1s infinite;
-        }
-
-
-        #yellow {
-            color: #ffee6f;
-            font-weight: bold;
-        }
-
-        button {
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        .server-details {
-            color: #3d3d3d;
-            border: 1px solid #000000;
-            border-radius: 5px;
-            padding: 10px;
-            margin-top: 20px;
-        }
-
-        .server-details h3 {
-            color: #f5f2f2;
-            margin-top: 0;
-            transition: color 0.15s ease;
-        }
-
-        .server-details h3:hover {
-            color: #ffff82;
-            margin-top: 0;
-        }
-
-        .server-details ul {
-            color: #bfbdbd;
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .server-details li {
-            color: #bfbdbd;
-            margin-bottom: 5px;
-        }
-
-        footer {
-            text-align: center;
-            color: #f4f4f4;
-            padding: 10px 0;
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-        }
-
-        img.w-48 {
-            max-width: 100%;
-            height: auto;
-        }
-
-
-        .fade-in {
-            animation: fade-in 1s ease-in-out;
-        }
-
-
-
-        .rotate {
-            animation: rotate 1s linear infinite;
-        }
-
-        @keyframes rotate {
-            0% {
-                transform: rotate(0);
-            }
-
-            100% {
-                transform: rotate(360deg);
-            }
-        }
-    </style>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const imageUrls = ['../img/1.png', '../img/2.png', '../img/3.png', '../img/4.png', '../img/5.png', '../img/6.png', '../img/7.png', '../img/8.png'];
-            const randomIndex = Math.floor(Math.random() * imageUrls.length);
-            const backgroundImage = new Image();
-            backgroundImage.src = imageUrls[randomIndex] ?? '../img/1.png';
-            backgroundImage.onload = function () {
-                document.body.style.backgroundImage = `url('${backgroundImage.src}')`;
-                document.body.classList.add('fade-in-background');
-            };
-            fetchPlayerCount()
-        })
-
-        function fetchPlayerCount() {
-            const ip = "cmgmmo.mc.in.th:21356"
-            const playerCountElement = document.getElementById('playerCount');
-            const version = document.getElementById('version');
-            const apiUrl = `https://api.mcsrvstat.us/bedrock/3/${ip}`;
-
-            fetch(apiUrl)
-                .then(response => response.json())
-                .then(data => {
-                    if (data.online) {
-                        const onlinePlayers = data.players.online;
-                        playerCountElement.textContent = `${onlinePlayers ?? 0}/${data.players.max ?? 30} คน`;
-                        version.textContent = data.version
-                    } else {
-                        version.textContent = "เซิร์ฟเวอร์อาจะกำลัง อัพเดท หรือ ปรับปรุง"
-                        playerCountElement.textContent = "เซิร์ฟเวอร์กำลังปิดปรับปรุง";
-                    }
-                })
-                .catch(error => {
-                    console.error('Error fetching player count:', error);
-                    playerCountElement.textContent = `⚠️ ${error}`;
-                });
-        }
-
-        window.addEventListener('load', fetchPlayerCount);
-
-        function openMinecraft() {
-            const userAgent = navigator.userAgent.toLowerCase();
-            const isIOS = /iphone|ipad|ipod/.test(userAgent);
-
-            const instructions = document.getElementById('instructions');
-            const button = document.getElementById('connect-button');
-
-            if (isIOS) {
-                instructions.innerHTML = `
-            <p>โทษทีนะแต่ IOS ไม่รองรับระบบการเพิ่ม เซิร์ฟเวอร์โดยอัตโนมัติ
-            กรุณาเพิ่มเซิร์ฟเวอร์ ด้วยตัวของคุณเอง
-            * ขออภัยในความไม่สดวก!</p>
-        `;
-            } else {
-                window.location.href = 'minecraft://?addExternalServer=§l§eCMGMMO|cmgmmo.mc.in.th:21356';
-                instructions.innerHTML = `
-            <p>ดูเหมือว่าคุณไม่ได้เข้าเกมไมน์คราฟต์</p>
-            <p>ตรวจสอบให้แน่ใจว่าคุณ ติดตั้งไมน์คราฟต์แล้ว</p>
-            <p>* กรุณาเพิ่มเซิร์ฟเวอร์ ด้วยตัวของคุณเอง ขออภัยในความไม่สดวก!</p>
-        `;
-            }
-            instructions.classList.add('fade-in');
-            button.classList.add('rotate');
-        }
-    </script>
+  <meta charset="UTF-8">
+  <title>CMGMMO!</title>
+  <link rel="icon"
+    href="https://media.discordapp.net/attachments/661178624124387328/1167674677196505158/received_851493273296244.jpg?ex=654efcc9&is=653c87c9&hm=e5bbbb8b1a78dad3ed261503e04e33118ca844dd8edbb28526f548cb0edcb828&=&width=671&height=671">
+  <meta http-equiv="refresh" content="0;url=https://cmgmmo.vercel.app/Server">
 </head>
-
-<body>
-    <main>
-        <div class="container">
-            <img src="../img/title.png" alt="Logo"
-                class="w-48 h-auto mb-5 animate-heartbeat_3s_ease-in-out_infinite rounded">
-            <p>ไมน์คราฟต์เซิร์ฟเวอร์ <span id="yellow">CMGMMO</span></p>
-            <p>เซิร์ฟเวอร์ เก็บเวลตีมอน บนไมน์คราฟต์มือถือ(Bedrock)</p>
-            <p>มีผู้คนกำลังเล่นอยู่: <span id="playerCount">กำลังโหลด..</span></p>
-            <p>เซิร์ฟเวอร์เวอชั่น: <span id="version">กำลังโหลด..</span></p>
-            <br>
-            <button id="connect-button" onclick="openMinecraft()">เพิ่มเซิร์ฟเวอร์</button>
-            <button id="cmgmmodis">เข้าร่วมดิสคอร์ด..</button>
-            <br>
-            <div class="server-details">
-                <h3>รายละเอียดของเซิร์ฟเวอร์</h3>
-                <ul>
-                    <li><strong>ชื่อเซิร์ฟเวอร์:</strong> CMGMMO!</li>
-                    <li><strong>ที่อยู่เซิร์ฟเวอร์:</strong> cmgmmo.mc.in.th</li>
-                    <li><strong>พอร์ตซิร์ฟเวอร์:</strong> 21356</li>
-                </ul>
-            </div>
-            <div id="instructions"></div>
-        </div>
-    </main>
-    <footer>
-        <p>&copy; CMGMMO. All rights reserved.</p>
-    </footer>
-</body>
 
 </html>
